Cabal/tests/ParserTests/errors/spdx-2.cabal
cabal-version:       2.4
name:                spdx
version:             0
synopsis:            testing positive parsing of spdx identifiers
build-type:          Simple
license:             AGPL-1.0

library
  default-language: Haskell2010
